fix equal btn dark mode

--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@ button:focus{
     margin-top: 1rem;
     flex: 1 1 45%;
 }
-#equal-btn {
+.equal-btn {
     font-size: x-large;
     width: 5rem;
     background-color: #FF8F8F;
